--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "react-spinners": "^0.14.1",
     "react-to-print": "^3.0.2",
     "recharts": "^2.13.3",
-    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
   "scripts": {
@@ -67,6 +66,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "web-vitals": "^4.2.4"
   }
 }
